Bug 1617092: nsXULPrototypeCache::HasData claims urls are cached when they aren't. r=dthayer.

A logic error is causing nsXULPrototypeCache::HasData to almost always return
true meaning we aren't actually writing anything to the XUL prototype cache.

Differential Revision: https://phabricator.services.mozilla.com/D63602

--HG--
extra : moz-landing-system : lando